--- a/FunctionsProject/package.json
+++ b/FunctionsProject/package.json
@@ -6,6 +6,10 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "big-integer": "^1.6.48",
+    "bluebird": "^3.7.2",
+    "redis": "^3.0.2"
+  },
   "devDependencies": {}
 }
